fix: flex wrap

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -174,6 +174,10 @@ footer .footer .columns > div > div:last-child a:hover {
     flex-direction: column;
   }
 
+  footer .block > div > div:last-child ul {
+    flex-wrap: wrap;
+  }
+
   footer .footer .columns > div > div:first-child {
     display: none;
   }
